# modern-cpp-workbench-starter

./: .bazelrc  .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  WORKSPACE  conanfile.py  dev.sh  main.cpp  run-with-asan.sh  shell.nix  test-asan.cpp
conan-profiles/: clang  gcc
docs/: overview.md  profiling.md  runtime.md  tooling.md
include/: container.hpp
nix/: home-manager.nix
scripts/: profile.sh
tests/: container_bazel_test.cpp  container_test.cpp
