cc_binary(
    name = "TemplatePlayground",
    srcs = ["main.cpp"],
    copts = ["-std=c++20"],
)

cc_library(
    name = "container",
    hdrs = ["include/container.hpp"],
    includes = ["include"],
    copts = ["-std=c++20"],
)

cc_test(
    name = "container_test",
    srcs = ["tests/container_bazel_test.cpp"],
    deps = [":container"],
    copts = ["-std=c++20"],
)
